--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 	<!-- <base href="/"> -->
 
-	<title>OptimizedHTML 4</title>
+	<title>Project-1</title>
 	<meta name="description" content="">
 
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -28,30 +28,21 @@
 
 <body>
 
-	<header class="header">		
-
-			<div class="container">
-				<div class="row">
-
-					<div class="header-logo col-md-3">
-						
-					</div>
-
-					<div class="header-navbar col-md-9">
-						<ul id="main-menu" class="sm">
-							<li class="active"><a href="#">Home</a></li>
-							<li><a href="#">Service</a></li>
-							<li><a href="#">About Us</a></li>
-							<li><a href="#">Pricing Table</a></li>
-							<li><a href="#">How It Work</a></li>
-							<li><a href="#">Happy Clients</a></li>
-							<li><a href="#">Contact Us</a></li>
-						</ul>
-					</div>
-
-				</div>
+	<header class="header">
+		<div class="wrapper grid">
+			<div class="header-logo grid">
+				<a href="#"><img src="img/header-logo.png" alt="Logo"></a>
 			</div>
-
+			<ul class="main-menu grid">
+				<li class="active"><a href="#">Home</a></li>
+				<li><a href="#">Service</a></li>
+				<li><a href="#">About Us</a></li>
+				<li><a href="#">Pricing Table</a></li>
+				<li><a href="#">How It Work</a></li>
+				<li><a href="#">Happy Clients</a></li>
+				<li><a href="#">Contact Us</a></li>
+			</ul>
+		</div>		
 	</header>
 
 	<div class="content">
