Begin Banner section

--- a/app/index.html
+++ b/app/index.html
@@ -30,7 +30,7 @@
 
 	<header class="header">
 		<div class="wrapper grid">
-			<div class="header-logo grid">
+			<div class="header-logo">
 				<a href="#"><img src="img/header-logo.png" alt="Logo"></a>
 			</div>
 			<ul class="main-menu grid">
@@ -45,9 +45,16 @@
 		</div>		
 	</header>
 
-	<div class="content">
-
-	</div>
+	<section class="banner">
+		<h2>Boost Up Your Local Business</h2>
+		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae repellat minus eos</p>
+		<form class="request-form grid">
+			<input type="text" name="name" placeholder="Full Name">
+			<input type="text" name="email" placeholder="Email Address">
+			<input type="text" name="phone" placeholder="Phone Number">
+			<button>Request A Quote</button>
+		</form>
+	</section>
 
 	<footer>
 
