Made request form

--- a/app/index.html
+++ b/app/index.html
@@ -46,14 +46,16 @@
 	</header>
 
 	<section class="banner">
-		<h2>Boost Up Your Local Business</h2>
-		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae repellat minus eos</p>
-		<form class="request-form grid">
-			<input type="text" name="name" placeholder="Full Name">
-			<input type="text" name="email" placeholder="Email Address">
-			<input type="text" name="phone" placeholder="Phone Number">
-			<button>Request A Quote</button>
-		</form>
+		<div class="wrapper">
+			<h2>Boost Up Your Local Business</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae repellat minus eos</p>
+			<form class="request-form grid">
+				<input type="text" name="name" placeholder="&#xf007;   Full Name">
+				<input type="text" name="email" placeholder="&#xf0e0;   Email Address">
+				<input type="text" name="phone" placeholder="&#xf095;   Phone Number">
+				<button class="button">Request A Quote</button>
+			</form>
+		</div>		
 	</section>
 
 	<footer>
