--- a/app/index.html
+++ b/app/index.html
@@ -55,7 +55,14 @@
 				<input type="text" name="phone" placeholder="Phone Number">
 				<button class="button">Request A Quote</button>
 			</form>
+			<div class="laptop">
+				<div class="laptop-inner"></div>
+			</div>		
 		</div>
+	</section>
+	
+	<section class="services">
+		
 	</section>
 
 	<footer>
