Add Owl Carousel

--- a/app/index.html
+++ b/app/index.html
@@ -57,6 +57,11 @@
 			</form>
 			<div class="laptop">
 				<div class="laptop-inner"></div>
+				<div class="owl-carousel">
+					<img src="img/laptop-image-1.jpg" alt="">
+					<img src="img/laptop-image-2.jpg" alt="">
+					<img src="img/laptop-image-3.jpg" alt="">
+				</div>
 			</div>		
 		</div>
 	</section>
