Created services section and began to style

--- a/app/index.html
+++ b/app/index.html
@@ -67,7 +67,37 @@
 	</section>
 	
 	<section class="services">
-		
+		<div class="wrapper">
+			<h2>Our Services</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+			<div class="services-content grid">				
+				<div class="services-item">
+					<i class="fas fa-user"></i>
+					<h3>Font-Awesome Icons</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos sit recusandae nostrum error commodi obcaecati! Reprehenderit, sit nesciunt voluptate vero alias possimus molestiae nostrum, aliquam asperiores hic beatae unde illum?</p>
+				</div>
+				<div class="services-item">
+					<h3>Fully Responsive Design</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius blanditiis aliquam dolorem nesciunt. Inventore repudiandae iure minima voluptatibus vitae, exercitationem repellat dolorem iste maiores deleniti, excepturi, suscipit ducimus sequi quis!</p>
+				</div>
+				<div class="services-item">
+					<h3>Working Contact Form</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum voluptatum porro vitae, optio nam perferendis similique commodi accusamus ex corporis non, sed vel neque repellendus quaerat aliquid unde nulla! Sit!</p>
+				</div>
+				<div class="services-item">
+					<h3>Retina Ready Icons Here</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit sint, unde beatae libero minima quidem dolorem vitae. Non fuga odit, autem nostrum, dolorem assumenda officia possimus deserunt, veritatis cumque delectus.</p>
+				</div>
+				<div class="services-item">
+					<h3>Friendly Code</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis eius doloribus obcaecati laboriosam possimus similique, iusto labore. Illum, deserunt nesciunt exercitationem corrupti atque ipsam corporis repellat, alias, qui accusamus sunt!</p>
+				</div>
+				<div class="services-item">
+					<h3>Flat Trendy Landing Page Design</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam architecto incidunt doloremque voluptatum dicta atque ullam, minima velit cum, sunt repellendus quisquam nam culpa, suscipit praesentium dignissimos accusamus a repellat.</p>
+				</div>				
+			</div>
+		</div>
 	</section>
 
 	<footer>
