--- a/app/index.html
+++ b/app/index.html
@@ -72,28 +72,46 @@
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
 			<div class="services-content grid">				
 				<div class="services-item">
-					<i class="fas fa-user"></i>
-					<h3>Font-Awesome Icons</h3>
+					<a href="#">
+						<i class="fas fa-clock"></i>
+						<h3>Font-Awesome Icons</h3>
+					</a>					
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dignissimos sit recusandae nostrum error commodi obcaecati! Reprehenderit, sit nesciunt voluptate vero alias possimus molestiae nostrum, aliquam asperiores hic beatae unde illum?</p>
 				</div>
 				<div class="services-item">
-					<h3>Fully Responsive Design</h3>
+					<a href="#">
+						<i class="fas fa-cog"></i>
+						<h3>Fully Responsive Design</h3>
+					</a>
+					
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eius blanditiis aliquam dolorem nesciunt. Inventore repudiandae iure minima voluptatibus vitae, exercitationem repellat dolorem iste maiores deleniti, excepturi, suscipit ducimus sequi quis!</p>
 				</div>
 				<div class="services-item">
-					<h3>Working Contact Form</h3>
+					<a href="#">
+						<i class="fas fa-graduation-cap"></i>
+						<h3>Working Contact Form</h3>
+					</a>					
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum voluptatum porro vitae, optio nam perferendis similique commodi accusamus ex corporis non, sed vel neque repellendus quaerat aliquid unde nulla! Sit!</p>
 				</div>
 				<div class="services-item">
-					<h3>Retina Ready Icons Here</h3>
+					<a href="#">
+						<i class="fas fa-rocket"></i>
+						<h3>Retina Ready Icons Here</h3>
+					</a>					
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Odit sint, unde beatae libero minima quidem dolorem vitae. Non fuga odit, autem nostrum, dolorem assumenda officia possimus deserunt, veritatis cumque delectus.</p>
 				</div>
 				<div class="services-item">
-					<h3>Friendly Code</h3>
+					<a href="#">
+						<i class="fas fa-code"></i>
+						<h3>Friendly Code</h3>
+					</a>					
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Perferendis eius doloribus obcaecati laboriosam possimus similique, iusto labore. Illum, deserunt nesciunt exercitationem corrupti atque ipsam corporis repellat, alias, qui accusamus sunt!</p>
 				</div>
 				<div class="services-item">
-					<h3>Flat Trendy Landing Page Design</h3>
+					<a href="#">
+						<i class="fas fa-pencil-alt"></i>
+						<h3>Flat Trendy Landing Page Design</h3>
+					</a>					
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quam architecto incidunt doloremque voluptatum dicta atque ullam, minima velit cum, sunt repellendus quisquam nam culpa, suscipit praesentium dignissimos accusamus a repellat.</p>
 				</div>				
 			</div>
