Finished About section

--- a/app/index.html
+++ b/app/index.html
@@ -117,6 +117,16 @@
 			</div>
 		</div>
 	</section>
+	
+	<section class="about" style="background-image: url(img/about-bg.jpg);">
+		<div class="wrapper grid">
+			<div class="about-content">
+				<h2>About Us</h2>
+				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Provident eum, fugit, labore dolorum doloremque, accusantium minima voluptates possimus vitae, facilis modi vero suscipit quod esse perspiciatis. Temporibus laudantium consectetur adipisci! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque, ea. Assumenda quae non, dignissimos mollitia. Necessitatibus perspiciatis, soluta fuga laudantium molestiae molestias, quia, modi quidem nesciunt iste et cum, eaque.</p>
+				<a href="#" class="button">Read More</a>
+			</div>
+		</div>
+	</section>
 
 	<footer>
 
