--- a/app/index.html
+++ b/app/index.html
@@ -132,12 +132,12 @@
 	<section class="price">
 		<div class="wrapper">
 			<h2>Choose Your Price</h2>
-			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+			<p class="header-p">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
 			<div class="price-content grid">
 				<div class="item">
 					<h3>Basic Plan</h3>
-					<p><span>$</span>22</p>
-					<p>Per Month</p>
+					<p class="dollars"><sup>$</sup>22</p>
+					<p class="per-month">Per Month</p>
 					<p>1 Account</p>
 					<p>8 Hour Support</p>
 					<p>Custom Cloud Services</p>
@@ -145,8 +145,8 @@
 				</div>
 				<div class="item item-premium">
 					<h3>Premium Plan</h3>
-					<p><span>$</span>42</p>
-					<p>Per Month</p>
+					<p class="dollars"><sup>$</sup>42</p>
+					<p class="per-month">Per Month</p>
 					<p>2 Account</p>
 					<p>100 MB Storage</p>
 					<p>Custom Cloud Services</p>
@@ -154,8 +154,8 @@
 				</div>
 				<div class="item">
 					<h3>Gold Plan</h3>
-					<p><span>$</span>62</p>
-					<p>Per Month</p>
+					<p class="dollars"><sup>$</sup>62</p>
+					<p class="per-month">Per Month</p>
 					<p>8 Account</p>
 					<p>24 Hour Support</p>
 					<p>Custom Cloud Services</p>
