--- a/app/index.html
+++ b/app/index.html
@@ -165,6 +165,42 @@
 			</div>
 		</div>
 	</section>
+	
+	<section class="work">
+	
+		<div class="wrapper">		
+			<h2>How It Works</h2>
+			<p class="header-p">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+			<div class="work-content grid">
+				<div class="item">
+					<i class="fas fa-headphones"></i>
+					<h3>Step 1</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptas excepturi nesciunt tenetur? Officiis, itaque.</p>
+				</div>
+				<div class="item">
+					<i class="fas fa-lock"></i>
+					<h3>Step 2</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				</div>
+				<div class="item">
+					<i class="fas fa-cloud-upload-alt"></i>
+					<h3>Step 3</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				</div>
+				<div class="item">
+					<i class="fas fa-thumbs-up"></i>
+					<h3>Step 4</h3>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+				</div>				
+			</div>	
+			<div class="work-button grid">
+				<a href="#" class="button">Get Start Now</a>
+			</div>			
+		</div>
+		
+		
+		
+	</section>
 
 	<footer>
 
