Began Clients section

--- a/app/index.html
+++ b/app/index.html
@@ -166,8 +166,7 @@
 		</div>
 	</section>
 	
-	<section class="work">
-	
+	<section class="work">	
 		<div class="wrapper">		
 			<h2>How It Works</h2>
 			<p class="header-p">Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
@@ -196,10 +195,36 @@
 			<div class="work-button grid">
 				<a href="#" class="button">Get Start Now</a>
 			</div>			
-		</div>
-		
-		
-		
+		</div>		
+	</section>
+	
+	<section class="clients">		
+		<div class="wrapper">
+			<h2>Happy Clients</h2>
+			<p>We are explain who is using business solutions</p>
+			<div class="review grid">
+				<div class="item">
+					<img src="img/review-1.png" alt="">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In libero velit esse iste enim ab minima voluptatum, quasi expedita, atque sint, aliquam nisi architecto placeat maiores itaque. Architecto ipsam, consequatur.</p>
+					<span>Darwin Michle, Project Manager</span>
+				</div>
+				<div class="item">
+					<img src="img/review-2.png" alt="">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio in alias nisi nostrum. Veritatis voluptate nobis, obcaecati vitae odit enim ad ipsa fuga, nisi tempora unde nulla, magnam facere dolor?</p>
+					<span>Madam Elisabath, Creative Director</span>
+				</div>
+				<div class="item">
+					<img src="img/review-3.png" alt="">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis quas obcaecati dolor dolore, asperiores a iure maxime, quae alias consectetur itaque nesciunt, iste impedit praesentium repellat doloremque officiis rem facere.</p>
+					<span>Clips Arter, Lipsum Director</span>
+				</div>
+				<div class="item">
+					<img src="img/review-4.png" alt="">
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia harum ipsum odit ab, minus architecto blanditiis velit nulla corrupti tempora repudiandae accusantium eligendi possimus dolor voluptatibus, at sunt facilis, saepe.</p>
+					<span>Zam Cristafr, Manager</span>
+				</div>
+			</div>
+		</div>		
 	</section>
 
 	<footer>
