--- a/app/index.html
+++ b/app/index.html
@@ -202,26 +202,34 @@
 		<div class="wrapper">
 			<h2>Happy Clients</h2>
 			<p>We are explain who is using business solutions</p>
-			<div class="review grid">
+			<div class="clients-content grid">
 				<div class="item">
 					<img src="img/review-1.png" alt="">
+					<i class="fas fa-quote-left"></i>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In libero velit esse iste enim ab minima voluptatum, quasi expedita, atque sint, aliquam nisi architecto placeat maiores itaque. Architecto ipsam, consequatur.</p>
-					<span>Darwin Michle, Project Manager</span>
+					<i class="fas fa-quote-right"></i>
+					<p class="author"><span>Darwin Michle,</span> Project Manager</p>
 				</div>
 				<div class="item">
 					<img src="img/review-2.png" alt="">
+					<i class="fas fa-quote-left"></i>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio in alias nisi nostrum. Veritatis voluptate nobis, obcaecati vitae odit enim ad ipsa fuga, nisi tempora unde nulla, magnam facere dolor?</p>
-					<span>Madam Elisabath, Creative Director</span>
+					<i class="fas fa-quote-right"></i>
+					<p class="author"><span>Madam Elisabath,</span> Creative Director</p>
 				</div>
 				<div class="item">
 					<img src="img/review-3.png" alt="">
+					<i class="fas fa-quote-left"></i>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Blanditiis quas obcaecati dolor dolore, asperiores a iure maxime, quae alias consectetur itaque nesciunt, iste impedit praesentium repellat doloremque officiis rem facere.</p>
-					<span>Clips Arter, Lipsum Director</span>
+					<i class="fas fa-quote-right"></i>
+					<p class="author"><span>Clips Arter,</span> Lipsum Director</p>
 				</div>
 				<div class="item">
 					<img src="img/review-4.png" alt="">
+					<i class="fas fa-quote-left"></i>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Mollitia harum ipsum odit ab, minus architecto blanditiis velit nulla corrupti tempora repudiandae accusantium eligendi possimus dolor voluptatibus, at sunt facilis, saepe.</p>
-					<span>Zam Cristafr, Manager</span>
+					<i class="fas fa-quote-right"></i>
+					<p class="author"><span>Zam Cristafr,</span> Manager</p>
 				</div>
 			</div>
 		</div>		
