Createde Subscribe form

--- a/app/index.html
+++ b/app/index.html
@@ -234,6 +234,28 @@
 			</div>
 		</div>		
 	</section>
+	
+	<section class="newsletter">
+		<div class="wrapper">
+			<h2>Newsletter</h2>
+			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit</p>
+			<form class="subscribe-form grid">
+				<input type="text" name="name" placeholder="Name">
+				<input type="text" name="email" placeholder="Email Address">
+				<button class="button">Subscribe Now</button>
+			</form>
+			<div class="content">
+				<div class="contacts">
+					<h3>Addres</h3>
+					<p>Business street</p>
+					<p>Second north section</p>
+					<p>Bavani nagar.88769</p>
+					<p>Call: +987-9976-999</p>
+					<p><a href="mailto:info@businessface.com">info@businessface.com</a></p>
+				</div>
+			</div>
+		</div>
+	</section>
 
 	<footer>
 
