--- a/app/index.html
+++ b/app/index.html
@@ -246,13 +246,14 @@
 			</form>
 			<div class="content">
 				<div class="contacts">
-					<h3>Addres</h3>
+					<h3>Address</h3>
 					<p>Business street</p>
 					<p>Second north section</p>
 					<p>Bavani nagar.88769</p>
 					<p>Call: +987-9976-999</p>
 					<p><a href="mailto:info@businessface.com">info@businessface.com</a></p>
 				</div>
+				<div class="newsletter-logo"><img src="img/header-logo.png" alt=""></div>
 			</div>
 		</div>
 	</section>
